--- a/styles.css
+++ b/styles.css
@@ -281,3 +281,16 @@ header {
   font-weight: bold;
   color: green;
 }
+
+.cart-item-image {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+
+.cart-item-details {
+  display: inline-block;
+  vertical-align: middle;
+}
